--- a/html/playerinfo.html
+++ b/html/playerinfo.html
@@ -4,6 +4,7 @@
         <title>Alien Addition - Player Info</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel='icon' href='../img/ufo.ico' type='image/x-icon'>
         <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@800&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../css/playerinfo.css">
     </head>
