Updated html for responsive layout design

--- a/html/gamerules.html
+++ b/html/gamerules.html
@@ -12,6 +12,7 @@
     <body>
         <main>
             <div class="container">
+                <div id="rules">
                 <h3>Rules of the Game</h3>
                 <ul>
                     <li>
@@ -46,6 +47,7 @@
                     </li>
                     
                 </ul>
+                </div>
             </div>
             <div id="ok-button">
                 OK
