Modified game instructions to support clicking or tapping operations..

--- a/html/alienmath.html
+++ b/html/alienmath.html
@@ -63,7 +63,7 @@
                 <div id="save-game">Save</div>
                 <div id="restart-game">Restart</div>
                 <div id="mute-game" class="mute-active">Mute:&nbsp;<span id="mute-game-value">YES</span></div>
-                <div id="status">Message:&nbsp;<span id="status-value">Press ARROW LEFT or RIGHT to move and SPACE to fire.</span></div>
+                <div id="status">Message:&nbsp;<span id="status-value">Press LEFT/RIGHT to move, press SPACE to fire or tap on UFO to destroy it.</span></div>
                 <!-- <div id="high-score">Highest HIT %:&nbsp;<span id="high-score-value">0</span></div> -->
             </div>
 
