--- a/html/gamerules.html
+++ b/html/gamerules.html
@@ -28,6 +28,10 @@
                     </li>
                     <br>
                     <li>
+                        Another option to destroy a spaceship without using a keyboard is to click or tap on a UFO.
+                    </li>
+                    <br>
+                    <li>
                         If the spaceship that was destroyed contains the math expression that will equate to the number printed at the cannon, 
                         the attack will be a <span>HIT</span> and all the spaceships will move back to the top-most portion of the game screen.
                     </li>
